# info2602Project

./: Procfile  README.md  initDB.py  main.py  models.py  pyproject.toml  readme.md  test.db
.theia/: settings.json
App/: initDB.py  main.py  models.py  rooms.csv  test.db
App/static/: app.html  signup.css
App/templates/: Layout.html  Login.html  Room.html  Roomtype.html  Signup.html  Updateuserbookings.html  Userbill.html  Userdetails.html
App/templates/Cleo/: about.html  app.html  bookingupdateform.html  home.html  layout.html
App/templates/tempstore/: Book.css  Home.html  Layout.html  Login.html  Login_Signup.css
static/: Home.css  Room.css
templates/: About.html  Book.html  Home.html  Layout.html  Login.html  Room.html  Roomtype.html  Signup.html  Updateuserbookings.html  Userbill.html  Userbookings.html  Userdetails.html
templates/Cleo/: login.html  room.html  signup.html
templates/tempstore/: Profile.html  Room.html  Signup.html  header.css
