[tool.poetry]
name = "info2602ps-1"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask-login = "^0.5.0"
flask-sqlalchemy = "^2.5.1"
sqlalchemy = "^1.4.2"
flask = "^1.1.2"
flask-cors = "^3.0.10"
flask-jwt = "^0.3.2"
werkzeug = "^1.0.1"
is-safe-url = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
